<resources>
    <string name="app_name">修一修</string>
    <string name="str_protocol"><u>《维修人工服务协议》</u></string>
    <string name="md_repair">家家悦</string>
    <string name="md_title_select_project">选择项目</string>
    <string name="md_title_select_project_open">展开</string>
    <string name="sure">确认</string>
    <string name="md_location_title">报修地点 : </string>
    <string name="md_pic_title">上传报修照片 : </string>
    <string name="md_location_hint">在此输入目的地</string>
    <string name="md_price_title">人工优惠价￥</string>
    <string name="md_repair_now">现在来修</string>
    <string name="md_repair_later">预约</string>
    <string name="str_server_no">客服热线：010-88888888</string>
    <string name="ars_register">注册</string>
    <string name="ars_local_title">所在地区:</string>
    <string name="ars_local_hint">请选择地区</string>
    <string name="ars_name_title">姓名:</string>
    <string name="ars_name_hint">请输入真实姓名</string>
    <string name="ars_idcard_title">身份证号:</string>
    <string name="ars_idcard_hint">请输入身份证号</string>
    <string name="ars_urgency_title">紧急联系人:</string>
    <string name="ars_urgency_hint">请输入紧急联系人姓名</string>
    <string name="ars_urgency_number_title">紧急联系人电话:</string>
    <string name="ars_urgency_number_hint">请输入11位手机号</string>
    <string name="art_upload_idcard_front">上传身份证正面照:</string>
    <string name="art_upload_idcard_back">上传身份证背面照:</string>
    <string name="art_upload_idcard_handheld">上传手持身份证照:</string>
    <string name="art_phone_audit">请耐心等待家家悦客服打电话给您,请随时保持电话畅通。</string>
    <string name="file_provider_authorities">com.repair.proj.provider</string>
    <string name="al_sure_location">确认目的地</string>
    <string name="md_side_oder_record">订单记录</string>
    <string name="md_side_master">我的师傅</string>
    <string name="md_side_ticket">修修券</string>
    <string name="md_side_mail">收件信箱</string>
    <string name="md_side_service">客服中心</string>
    <string name="md_side_rewards">邀请有奖</string>
    <string name="md_side_setting">更多设置</string>
    <string name="aml_match_content"> 匹配师傅中…</string>
    <string name="aml_match_tip"> 正在通知附近师傅</string>
    <string name="aml_waite_tip">已等候:</string>
    <string name="aml_matched">待维修</string>
    <string name="bd_error_code_62">无法获取有效定位依据，定位失败，请检查运营商网络或者WiFi网络是否正常开启，尝试重新请求定位</string>
    <string name="bd_error_code_63">网络异常，没有成功向服务器发起请求，请确认当前测试手机网络是否通畅，尝试重新请求定位</string>
    <string name="time_gmt">GMT+00:00</string>
    <string name="aml_payment_content">支付材料费用</string>
    <string name="aml_paymeny_tip">若订单产生材料费用，可在线支付</string>
    <string name="aml_price_unit">￥</string>
    <string name="aml_urge_order">催单</string>
    <string name="cancle">取消</string>
    <string name="call">打电话</string>
    <string name="chat">聊天</string>
    <string name="camera">拍照</string>
    <string name="album">相册</string>
    <string name="select_album">从相册选择</string>
    <string name="str_user_protocol"><u>家家悦用户协议</u></string>
    <string name="str_my_worker_tip">收藏好师傅，\n直接发单给他们。</string>
    <string name="opa_pay_content">支付材料费用</string>
    <string name="opa_order_pay_tip">输入材料金额 (元)</string>
    <string name="opa_materials_search">输入材料名称</string>
    <string name="opa_order_materials_price">查看材料价格表</string>
    <string name="opa_sure_pay">支付费用</string>
    <string name="mih_unit">单位</string>
    <string name="mih_name">材料名称</string>
    <string name="mih_price">优惠价(元)</string>
    <string name="mih_num">数量</string>
    <string name="opa_unit">￥</string>
    <string name="str_purch">确认收货</string>
    <string name="str_have">确认出售</string>
    <string name="str_order_complete">修理完成</string>
    <string name="str_order_cancel">已取消</string>
</resources>
