<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/mih_name"
        android:layout_width="0dp"
        android:layout_height="96px"
        android:layout_weight="1"
        android:gravity="start|center"
        android:maxLines="1"
        android:text="@string/mih_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/mih_unit"
        android:layout_width="0dp"
        android:layout_height="96px"
        android:layout_weight="1"
        android:gravity="start|center"
        android:text="@string/mih_unit"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/mih_price"
        android:layout_width="0dp"
        android:layout_height="96px"
        android:layout_weight="1"
        android:gravity="start|center"
        android:text="@string/mih_price"
        android:textSize="16sp" />


</com.zhy.autolayout.AutoLinearLayout>