<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/md_drawer_left"
    android:layout_width="270dp"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    android:background="@color/color_ffffff"
    android:clickable="true"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/md_side_header"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginTop="112px" />

    <TextView
        android:id="@+id/md_side_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:gravity="center"
        android:text="15378183400"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/md_side_oder_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="82px"
        android:drawablePadding="40px"
        android:drawableRight="@drawable/icon_contacts"
        android:gravity="right|center_vertical"
        android:paddingRight="22px"
        android:text="@string/md_side_oder_record"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/md_side_master"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:drawablePadding="40px"
        android:drawableRight="@drawable/icon_contacts"
        android:gravity="right|center_vertical"
        android:paddingRight="22px"
        android:text="@string/md_side_master"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/md_side_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:drawablePadding="40px"
        android:drawableRight="@drawable/icon_contacts"
        android:gravity="right|center_vertical"
        android:paddingRight="22px"
        android:text="@string/md_side_ticket"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/md_side_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:drawablePadding="40px"
        android:drawableRight="@drawable/icon_contacts"
        android:gravity="right|center_vertical"
        android:paddingRight="22px"
        android:text="@string/md_side_mail"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/md_side_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:drawablePadding="40px"
        android:drawableRight="@drawable/icon_contacts"
        android:gravity="right|center_vertical"
        android:paddingRight="22px"
        android:text="@string/md_side_service"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/md_side_rewards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:drawablePadding="40px"
        android:drawableRight="@drawable/icon_contacts"
        android:gravity="right|center_vertical"
        android:paddingRight="22px"
        android:text="@string/md_side_rewards"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/md_side_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:drawablePadding="40px"
        android:drawableRight="@drawable/icon_contacts"
        android:gravity="right|center_vertical"
        android:paddingRight="22px"
        android:text="@string/md_side_setting"
        android:textSize="14sp" />
</com.zhy.autolayout.AutoLinearLayout>