<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/ars_header"
        android:layout_width="match_parent"
        android:layout_height="112px"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ars_h_cancle"
            android:layout_width="32px"
            android:layout_height="32px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:src="@drawable/cancle" />

        <TextView
            android:id="@+id/ars_h_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ars_register"
            android:textSize="16sp" />

    </com.zhy.autolayout.AutoRelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ars_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="92px"
        android:paddingLeft="32px"
        android:paddingRight="32px" />

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="94px"
        android:layout_marginLeft="32px"
        android:layout_marginRight="32px"
        android:layout_marginTop="74px">

        <TextView
            android:id="@+id/ars_local_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/ars_local_title"
            android:textColor="@color/color_000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ars_local_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12px"
            android:layout_toRightOf="@id/ars_local_title"
            android:background="@color/color_ffffff"
            android:drawableRight="@drawable/arrow_right_black"
            android:hint="@string/ars_local_hint"
            android:paddingRight="16px"
            android:textColorHint="@color/color_bbbbbb"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/color_bbbbbb" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="94px"
        android:layout_marginLeft="32px"
        android:layout_marginRight="32px">

        <TextView
            android:id="@+id/ars_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/ars_name_title"
            android:textColor="@color/color_000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ars_name_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12px"
            android:layout_toRightOf="@id/ars_name_title"
            android:background="@color/color_ffffff"
            android:hint="@string/ars_name_hint"
            android:paddingRight="16px"
            android:textColorHint="@color/color_bbbbbb"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/color_bbbbbb" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="94px"
        android:layout_marginLeft="32px"
        android:layout_marginRight="32px">

        <TextView
            android:id="@+id/ars_idcard_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/ars_idcard_title"
            android:textColor="@color/color_000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ars_idcard_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12px"
            android:layout_toRightOf="@id/ars_idcard_title"
            android:background="@color/color_ffffff"
            android:hint="@string/ars_idcard_hint"
            android:paddingRight="16px"
            android:textColorHint="@color/color_bbbbbb"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/color_bbbbbb" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="94px"
        android:layout_marginLeft="32px"
        android:layout_marginRight="32px">

        <TextView
            android:id="@+id/ars_urgency_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/ars_urgency_title"
            android:textColor="@color/color_000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ars_urgency_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12px"
            android:layout_toRightOf="@id/ars_urgency_title"
            android:background="@color/color_ffffff"
            android:hint="@string/ars_urgency_hint"
            android:paddingRight="16px"
            android:textColorHint="@color/color_bbbbbb"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/color_bbbbbb" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="94px"
        android:layout_marginLeft="32px"
        android:layout_marginRight="32px">

        <TextView
            android:id="@+id/ars_urgency_number_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/ars_urgency_number_title"
            android:textColor="@color/color_000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ars_urgency_number_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12px"
            android:layout_toRightOf="@id/ars_urgency_number_title"
            android:background="@color/color_ffffff"
            android:hint="@string/ars_urgency_number_hint"
            android:paddingRight="16px"
            android:textColorHint="@color/color_bbbbbb"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/color_bbbbbb" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/ars_next"
            android:layout_width="match_parent"
            android:layout_height="102px"
            android:layout_alignParentBottom="true"
            android:background="@color/app_base_color"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/app_second_color"
            android:text="下一步" />
    </com.zhy.autolayout.AutoRelativeLayout>
</com.zhy.autolayout.AutoLinearLayout>