<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--toolbar相关-->
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/md_tb"
        android:layout_width="match_parent"
        android:layout_height="102px">

        <ImageView
            android:id="@+id/md_tb_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8px"
            android:src="@drawable/repair" />

        <TextView
            android:id="@+id/md_tb_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16px"
            android:layout_toRightOf="@id/md_tb_logo"
            android:text="@string/md_repair" />

        <ImageView
            android:id="@+id/md_tb_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16px"
            android:src="@drawable/icon_contacts" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <!--关于TabLayout-->
    <android.support.design.widget.TabLayout
        android:id="@+id/md_tab"
        android:layout_width="match_parent"
        android:layout_height="85px"
        android:layout_below="@id/md_tb"
        app:tabIndicatorColor="@color/color_ff9800"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/color_ff9800"
        app:tabTextColor="@color/color_000000">

    </android.support.design.widget.TabLayout>

    <!--分割线1-->
    <TextView
        android:id="@+id/md_diver1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/md_tab"
        android:background="@color/color_bebebe" />

    <!--项目类型展示-->

    <!--分割线2-->
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/md_pj_rl"
        android:layout_width="match_parent"
        android:layout_height="300px"
        android:layout_below="@id/md_diver1">

        <ImageView
            android:id="@+id/md_pj_arrow_l"
            android:layout_width="36px"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="32px"
            android:src="@drawable/ic_left_arrow" />


        <ImageView
            android:id="@+id/md_pj_arrow_r"
            android:layout_width="36px"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="32px"
            android:src="@drawable/ic_right_arrow" />

        <android.support.v4.view.ViewPager
            android:id="@+id/md_pj_vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="32px"
            android:layout_marginRight="32px"
            android:layout_toEndOf="@id/md_pj_arrow_l"
            android:layout_toLeftOf="@id/md_pj_arrow_r"
            android:layout_toRightOf="@id/md_pj_arrow_l"
            android:layout_toStartOf="@id/md_pj_arrow_r" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <TextView
        android:id="@+id/md_diver2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/md_pj_rl"
        android:background="@color/color_bebebe" />

    <!--项目选择-->
    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/md_pj_select_ll"
        android:layout_width="match_parent"
        android:layout_height="92px"
        android:layout_below="@id/md_diver2">

        <TextView
            android:id="@+id/md_title_select_project"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16px"
            android:layout_weight="1"
            android:gravity="start|center"
            android:text="@string/md_title_select_project"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/md_title_select_project_open"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="16px"
            android:layout_weight="1"
            android:drawablePadding="16px"
            android:drawableRight="@drawable/arrow_down"
            android:gravity="end|center"
            android:text="@string/md_title_select_project_open"
            android:textColor="@color/color_ff9800"
            android:textSize="12sp" />
    </com.zhy.autolayout.AutoLinearLayout>

    <!--分割线3-->
    <TextView
        android:id="@+id/md_diver3"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/md_pj_select_ll"
        android:background="@color/color_bebebe" />

    <!--定位相关-->
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/md_types"
        android:layout_width="match_parent"
        android:layout_height="440px"
        android:layout_below="@id/md_diver3"
        android:background="@color/color_f0f0f0">

        <!--定位相关-->
        <LinearLayout
            android:id="@+id/md_location"
            android:layout_width="match_parent"
            android:layout_height="102px"
            android:layout_marginLeft="32px"
            android:layout_marginRight="32px"
            android:layout_marginTop="16px"
            android:clickable="true"
            android:background="@color/color_ffffff">


            <TextView
                android:id="@+id/md_location_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="16px"
                android:text="@string/md_location_title"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/md_location_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_ffffff"
                android:focusable="false"
                android:drawableRight="@drawable/type_add"
                android:hint="@string/md_location_hint"
                android:inputType="none"
                android:paddingLeft="8px"
                android:paddingRight="16px"
                android:textColor="@color/color_111111"
                android:textColorHint="@color/color_8f8f8f"
                android:textSize="14sp" />

        </LinearLayout>


    </com.zhy.autolayout.AutoRelativeLayout>

    <!--价格相关-->
    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/md_price"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:layout_below="@id/md_types">

        <TextView
            android:id="@+id/md_price_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="end|center_vertical"
            android:text="@string/md_price_title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/md_price_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="start|center_vertical"
            android:text="200"
            android:textColor="@color/color_111111"
            android:textSize="28sp" />
    </com.zhy.autolayout.AutoLinearLayout>

    <!--订单相关-->
    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/md_order"
        android:layout_width="match_parent"
        android:layout_height="112px"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/md_repair_now"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/app_base_color"
            android:gravity="center"
            android:text="@string/md_repair_now"
            android:textColor="@color/color_111111"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/md_repair_later"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_ff9800"
            android:gravity="center"
            android:text="@string/md_repair_later"
            android:textColor="@color/color_111111"
            android:textSize="14sp" />
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoRelativeLayout>