<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="address"
            type="String" />
    </data>

    <com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/md_diver3"
        android:background="@color/color_f0f0f0"
        android:orientation="vertical">

        <!--订单相关-->
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/md_order"
            android:layout_width="match_parent"
            android:layout_height="112px"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/md_repair_now"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/app_base_color"
                android:gravity="center"
                android:text="@string/md_repair_now"
                android:textColor="@color/color_111111"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/md_repair_later"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/app_second_color"
                android:gravity="center"
                android:text="@string/md_repair_later"
                android:textColor="@color/color_111111"
                android:textSize="14sp" />
        </com.zhy.autolayout.AutoLinearLayout>

        <!--价格相关-->
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/md_price"
            android:layout_width="match_parent"
            android:layout_height="130px"
            android:layout_above="@id/md_order"
            android:background="@color/color_ffffff">

            <TextView
                android:id="@+id/md_price_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="end|center_vertical"
                android:text="@string/md_price_title"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/md_price_num"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="start|center_vertical"
                android:text="200"
                android:textColor="@color/color_111111"
                android:textSize="28sp" />
        </com.zhy.autolayout.AutoLinearLayout>

        <ScrollView
            android:id="@+id/md_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/md_price"
            android:scrollbars="none">

            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/md_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--定位相关-->
                <com.zhy.autolayout.AutoLinearLayout
                    android:id="@+id/md_location"
                    android:layout_width="match_parent"
                    android:layout_height="102px"
                    android:layout_marginLeft="32px"
                    android:layout_marginRight="32px"
                    android:layout_marginTop="16px"
                    android:background="@color/color_ffffff"
                    android:clickable="true">


                    <TextView
                        android:id="@+id/md_location_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingLeft="16px"
                        android:text="@string/md_location_title"
                        android:textColor="@color/color_111111"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/md_location_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/color_ffffff"
                        android:drawableRight="@drawable/type_add"
                        android:focusable="false"
                        android:hint="@string/md_location_hint"
                        android:inputType="none"
                        android:paddingLeft="8px"
                        android:paddingRight="16px"
                        android:text="@{address}"
                        android:textColor="@color/color_111111"
                        android:textColorHint="@color/color_8f8f8f"
                        android:textSize="14sp" />

                </com.zhy.autolayout.AutoLinearLayout>

                <!--上传照片-->
                <com.zhy.autolayout.AutoLinearLayout
                    android:id="@+id/md_pic"
                    android:layout_width="match_parent"
                    android:layout_height="204px"
                    android:layout_below="@id/md_location"
                    android:layout_marginLeft="32px"
                    android:layout_marginRight="32px"
                    android:layout_marginTop="16px"
                    android:background="@color/color_ffffff"
                    android:clickable="true"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/md_pic_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16px"
                        android:gravity="center"
                        android:paddingLeft="16px"
                        android:text="@string/md_pic_title"
                        android:textColor="@color/color_111111"
                        android:textSize="14sp" />

                    <com.zhy.autolayout.AutoLinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/md_pic_1"
                            android:layout_width="136px"
                            android:layout_height="136px"
                            android:layout_marginLeft="16px"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/md_pic_2"
                            android:layout_width="136px"
                            android:layout_height="136px"
                            android:layout_marginLeft="16px"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/md_pic_3"
                            android:layout_width="136px"
                            android:layout_height="136px"
                            android:layout_marginLeft="16px"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/md_pic_up"
                            android:layout_width="136px"
                            android:layout_height="136px"
                            android:layout_marginLeft="16px"
                            android:background="@drawable/up_image_border"
                            android:src="@drawable/upload_add" />
                    </com.zhy.autolayout.AutoLinearLayout>

                </com.zhy.autolayout.AutoLinearLayout>

            </com.zhy.autolayout.AutoLinearLayout>

        </ScrollView>
    </com.zhy.autolayout.AutoRelativeLayout>
</layout>
